01_dashboard/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homelab-dashboard
  labels:
    app: homelab-dashboard
spec:
  selector:
    app: homelab-dashboard
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
