01_dashboard/route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homelab-dashboard-route
  namespace: nonprod
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    # Rule on the Host
    match: Host(`homelab.deploywizard.in`)
    services:
      - kind: Service
        name: homelab-dashboard
        namespace: nonprod
        port: 80
